options accordion mobile fixed

--- a/PomoTimer/style.css
+++ b/PomoTimer/style.css
@@ -290,7 +290,6 @@ button {
     }
 
     .options {
-        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
